// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionAdmin /> render correctly a checkbox question 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    className="d-flex align-items-center"
    componentClass="div"
    xs={8}
  >
    <QuestionAdmin__ItemQuestionWrapper>
      <i
        className="cap cap-android-menu"
        style={
          Object {
            "color": "#0388cc",
            "fontSize": "20px",
          }
        }
      />
    </QuestionAdmin__ItemQuestionWrapper>
    <QuestionAdmin__ItemQuestionWrapper>
      <i
        className="cap cap-bubble-ask-2"
        style={
          Object {
            "color": "#707070",
            "fontSize": "20px",
          }
        }
      />
    </QuestionAdmin__ItemQuestionWrapper>
    <QuestionAdmin__ItemQuestionWrapper>
      <strong>
        Question Title
      </strong>
      <br />
      <span
        className="excerpt"
      >
        <FormattedMessage
          id="global.question.types.multiple_multiple"
          values={Object {}}
        />
      </span>
    </QuestionAdmin__ItemQuestionWrapper>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={4}
  >
    <ButtonToolbar
      bsClass="btn-toolbar"
      className="pull-right"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="warning"
        className="btn-outline-warning"
        disabled={false}
        onClick={[Function]}
      >
        <i
          className="fa fa-pencil"
        />
         
        <FormattedMessage
          id="global.edit"
          values={Object {}}
        />
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="danger"
        className="btn-outline-danger"
        disabled={false}
        id="js-btn-delete-1"
        onClick={[Function]}
      >
        <i
          className="cap cap-times"
        />
         
        <FormattedMessage
          id="global.delete"
          values={Object {}}
        />
      </Button>
    </ButtonToolbar>
  </Col>
</Row>
`;

exports[`<QuestionAdmin /> render correctly a medias question 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    className="d-flex align-items-center"
    componentClass="div"
    xs={8}
  >
    <QuestionAdmin__ItemQuestionWrapper>
      <i
        className="cap cap-android-menu"
        style={
          Object {
            "color": "#0388cc",
            "fontSize": "20px",
          }
        }
      />
    </QuestionAdmin__ItemQuestionWrapper>
    <QuestionAdmin__ItemQuestionWrapper>
      <i
        className="cap cap-bubble-ask-2"
        style={
          Object {
            "color": "#707070",
            "fontSize": "20px",
          }
        }
      />
    </QuestionAdmin__ItemQuestionWrapper>
    <QuestionAdmin__ItemQuestionWrapper>
      <strong>
        Question Title
      </strong>
      <br />
      <span
        className="excerpt"
      >
        <FormattedMessage
          id="global.question.types.other"
          values={Object {}}
        />
      </span>
    </QuestionAdmin__ItemQuestionWrapper>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={4}
  >
    <ButtonToolbar
      bsClass="btn-toolbar"
      className="pull-right"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="warning"
        className="btn-outline-warning"
        disabled={false}
        onClick={[Function]}
      >
        <i
          className="fa fa-pencil"
        />
         
        <FormattedMessage
          id="global.edit"
          values={Object {}}
        />
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="danger"
        className="btn-outline-danger"
        disabled={false}
        id="js-btn-delete-1"
        onClick={[Function]}
      >
        <i
          className="cap cap-times"
        />
         
        <FormattedMessage
          id="global.delete"
          values={Object {}}
        />
      </Button>
    </ButtonToolbar>
  </Col>
</Row>
`;

exports[`<QuestionAdmin /> render correctly a section 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    className="d-flex align-items-center"
    componentClass="div"
    xs={8}
  >
    <QuestionAdmin__ItemQuestionWrapper>
      <i
        className="cap cap-android-menu"
        style={
          Object {
            "color": "#0388cc",
            "fontSize": "20px",
          }
        }
      />
    </QuestionAdmin__ItemQuestionWrapper>
    <QuestionAdmin__ItemQuestionWrapper>
      <i
        className="cap cap-small-caps-1"
        style={
          Object {
            "color": "#707070",
            "fontSize": "20px",
          }
        }
      />
    </QuestionAdmin__ItemQuestionWrapper>
    <QuestionAdmin__ItemQuestionWrapper>
      <strong>
        Section Title
      </strong>
      <br />
      <span
        className="excerpt"
      >
        <FormattedMessage
          id="global.question.types.section"
          values={Object {}}
        />
      </span>
    </QuestionAdmin__ItemQuestionWrapper>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={4}
  >
    <ButtonToolbar
      bsClass="btn-toolbar"
      className="pull-right"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="warning"
        className="btn-outline-warning"
        disabled={false}
        onClick={[Function]}
      >
        <i
          className="fa fa-pencil"
        />
         
        <FormattedMessage
          id="global.edit"
          values={Object {}}
        />
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="danger"
        className="btn-outline-danger"
        disabled={false}
        id="js-btn-delete-1"
        onClick={[Function]}
      >
        <i
          className="cap cap-times"
        />
         
        <FormattedMessage
          id="global.delete"
          values={Object {}}
        />
      </Button>
    </ButtonToolbar>
  </Col>
</Row>
`;

exports[`<QuestionAdmin /> render correctly a text question 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    className="d-flex align-items-center"
    componentClass="div"
    xs={8}
  >
    <QuestionAdmin__ItemQuestionWrapper>
      <i
        className="cap cap-android-menu"
        style={
          Object {
            "color": "#0388cc",
            "fontSize": "20px",
          }
        }
      />
    </QuestionAdmin__ItemQuestionWrapper>
    <QuestionAdmin__ItemQuestionWrapper>
      <i
        className="cap cap-bubble-ask-2"
        style={
          Object {
            "color": "#707070",
            "fontSize": "20px",
          }
        }
      />
    </QuestionAdmin__ItemQuestionWrapper>
    <QuestionAdmin__ItemQuestionWrapper>
      <strong>
        Question Title
      </strong>
      <br />
      <span
        className="excerpt"
      >
        <FormattedMessage
          id="global.question.types.free"
          values={Object {}}
        />
      </span>
    </QuestionAdmin__ItemQuestionWrapper>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={4}
  >
    <ButtonToolbar
      bsClass="btn-toolbar"
      className="pull-right"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="warning"
        className="btn-outline-warning"
        disabled={false}
        onClick={[Function]}
      >
        <i
          className="fa fa-pencil"
        />
         
        <FormattedMessage
          id="global.edit"
          values={Object {}}
        />
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="danger"
        className="btn-outline-danger"
        disabled={false}
        id="js-btn-delete-1"
        onClick={[Function]}
      >
        <i
          className="cap cap-times"
        />
         
        <FormattedMessage
          id="global.delete"
          values={Object {}}
        />
      </Button>
    </ButtonToolbar>
  </Col>
</Row>
`;
